# piano-transcriber

./: .gitignore  data_parser.py  data_visualizer.py  nn_models.py  nn_pitch.py  output.mid  pyproject.toml
piano_transcriber/: __init__.py  cli.py  inference.py  nn_pitch.py
piano_transcriber/audio/: data_parser.py
piano_transcriber/gui/: __init__.py  app.py  main_window.py  transcription_widget.py
piano_transcriber/midi/: __init__.py
piano_transcriber/web/: .gitignore
sample audio/: A0.m4a  C major 2 octave.m4a  C major sustain.m4a  C# minor.m4a  Chromatic chords.m4a  Chromatic.m4a  Ditto arpeg.m4a  Do mi so do.m4a  Do mi so.m4a  Do mi.m4a  Do.m4a  Highest C.m4a
transcriber/: nn_pitch.py
transcriber/audio/: data_preprocessing.py
transcriber/model/: nn_models.py
