[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piano-transcriber"
version = "0.1.0"
description = "Neural network-based automatic piano transcription"
authors = [{name = "Winston Chan", email = "winstonchan333@gmail.com"}]
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=1.13.0",
    "torchaudio>=0.13.0", 
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "pretty_midi>=0.2.9",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "isort>=5.0",
    "flake8>=3.8",
]

[project.urls]
Homepage = "https://github.com/winc3/piano-transcriber"
Repository = "https://github.com/winc3/piano-transcriber.git"
Issues = "https://github.com/winc3/piano-transcriber/issues"

[project.scripts]
piano-transcriber = "piano_transcriber.cli:main"

[tool.setuptools]
packages = ["piano_transcriber", "piano_transcriber.audio", "piano_transcriber.model", "piano_transcriber.midi"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3